--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
                    <div class="clear"></div>
               
                <div id="love">
-                   <p style="color: white;font-weight: bold;">All copyrigth riserved by ASK MORE 2022</p>
+                   <p style="color: white;font-weight: bold;">All copyrigths reserved  ASK MORE 2022</p>
                </div>
            </div>
      
